TP2/y.output
Grammar

    0 $accept: Programa $end

    1 Programa: Funcoes MainFunc

    2 Funcoes: Funcoes Funcao
    3        | /* empty */

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' Decls Instrucoes Return '}'

    5 Return: RETURN Expr ';'

    6 MainFunc: MAIN '{' Decls Instrucoes '}'

    7 Decls: Decls Decl
    8      | /* empty */

    9 Decl: INT DeclsVar ';'

   10 DeclsVar: DeclVar
   11         | DeclVar ',' DeclsVar

   12 DeclVar: DESIGNACAO Init
   13        | DESIGNACAO '[' VALOR ']'
   14        | DESIGNACAO '[' VALOR ']' '[' VALOR ']'

   15 Init: '=' Expr
   16     | /* empty */

   17 Instrucoes: Instrucoes Instrucao
   18           | /* empty */

   19 Instrucao: Var '=' Expr ';'
   20          | IF '(' Cond ')' '{' Instrucoes '}'
   21          | IF '(' Cond ')' '{' Instrucoes '}' ELSE '{' Instrucoes '}'
   22          | WHILE '(' Cond ')' '{' Instrucoes '}'
   23          | PRINT Expr ';'
   24          | PRINT STRING ';'
   25          | READ Var ';'
   26          | DESIGNACAO '(' ')' ';'

   27 Cond: Expr '>' '=' Expr
   28     | Expr '<' '=' Expr
   29     | Expr '=' '=' Expr
   30     | Expr '!' '=' Expr
   31     | Expr '<' Expr
   32     | Expr '>' Expr
   33     | Expr

   34 Expr: Termo
   35     | Expr '+' Termo
   36     | Expr '-' Termo
   37     | Expr '|' Termo

   38 Termo: Fator
   39      | Termo '*' Fator
   40      | Termo '/' Fator
   41      | Termo '%' Fator
   42      | Termo '&' Fator

   43 Fator: VALOR
   44      | Var
   45      | '(' Cond ')'
   46      | DESIGNACAO '(' ')'

   47 Var: DESIGNACAO
   48    | DESIGNACAO '[' Expr ']'
   49    | DESIGNACAO '[' Expr ']' '[' Expr ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 41
'&' (38) 42
'(' (40) 4 20 21 22 26 45 46
')' (41) 4 20 21 22 26 45 46
'*' (42) 39
'+' (43) 35
',' (44) 11
'-' (45) 36
'/' (47) 40
';' (59) 5 9 19 23 24 25 26
'<' (60) 28 31
'=' (61) 15 19 27 28 29 30
'>' (62) 27 32
'[' (91) 13 14 48 49
']' (93) 13 14 48 49
'{' (123) 4 6 20 21 22
'|' (124) 37
'}' (125) 4 6 20 21 22
error (256)
MAIN (258) 6
IF (259) 20 21
ELSE (260) 21
WHILE (261) 22
READ (262) 25
PRINT (263) 23 24
RETURN (264) 5
FUNCAO (265) 4
INT (266) 9
VALOR (267) 13 14 43
DESIGNACAO (268) 4 12 13 14 26 46 47 48 49
STRING (269) 24


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Programa (35)
    on left: 1, on right: 0
Funcoes (36)
    on left: 2 3, on right: 1 2
Funcao (37)
    on left: 4, on right: 2
Return (38)
    on left: 5, on right: 4
MainFunc (39)
    on left: 6, on right: 1
Decls (40)
    on left: 7 8, on right: 4 6 7
Decl (41)
    on left: 9, on right: 7
DeclsVar (42)
    on left: 10 11, on right: 9 11
DeclVar (43)
    on left: 12 13 14, on right: 10 11
Init (44)
    on left: 15 16, on right: 12
Instrucoes (45)
    on left: 17 18, on right: 4 6 17 20 21 22
Instrucao (46)
    on left: 19 20 21 22 23 24 25 26, on right: 17
Cond (47)
    on left: 27 28 29 30 31 32 33, on right: 20 21 22 45
Expr (48)
    on left: 34 35 36 37, on right: 5 15 19 23 27 28 29 30 31 32 33
    35 36 37 48 49
Termo (49)
    on left: 38 39 40 41 42, on right: 34 35 36 37 39 40 41 42
Fator (50)
    on left: 43 44 45 46, on right: 38 39 40 41 42
Var (51)
    on left: 47 48 49, on right: 19 25 44


state 0

    0 $accept: . Programa $end

    $default  reduce using rule 3 (Funcoes)

    Programa  go to state 1
    Funcoes   go to state 2


state 1

    0 $accept: Programa . $end

    $end  shift, and go to state 3


state 2

    1 Programa: Funcoes . MainFunc
    2 Funcoes: Funcoes . Funcao

    MAIN    shift, and go to state 4
    FUNCAO  shift, and go to state 5

    Funcao    go to state 6
    MainFunc  go to state 7


state 3

    0 $accept: Programa $end .

    $default  accept


state 4

    6 MainFunc: MAIN . '{' Decls Instrucoes '}'

    '{'  shift, and go to state 8


state 5

    4 Funcao: FUNCAO . DESIGNACAO '(' ')' '{' Decls Instrucoes Return '}'

    DESIGNACAO  shift, and go to state 9


state 6

    2 Funcoes: Funcoes Funcao .

    $default  reduce using rule 2 (Funcoes)


state 7

    1 Programa: Funcoes MainFunc .

    $default  reduce using rule 1 (Programa)


state 8

    6 MainFunc: MAIN '{' . Decls Instrucoes '}'

    $default  reduce using rule 8 (Decls)

    Decls  go to state 10


state 9

    4 Funcao: FUNCAO DESIGNACAO . '(' ')' '{' Decls Instrucoes Return '}'

    '('  shift, and go to state 11


state 10

    6 MainFunc: MAIN '{' Decls . Instrucoes '}'
    7 Decls: Decls . Decl

    INT  shift, and go to state 12

    $default  reduce using rule 18 (Instrucoes)

    Decl        go to state 13
    Instrucoes  go to state 14


state 11

    4 Funcao: FUNCAO DESIGNACAO '(' . ')' '{' Decls Instrucoes Return '}'

    ')'  shift, and go to state 15


state 12

    9 Decl: INT . DeclsVar ';'

    DESIGNACAO  shift, and go to state 16

    DeclsVar  go to state 17
    DeclVar   go to state 18


state 13

    7 Decls: Decls Decl .

    $default  reduce using rule 7 (Decls)


state 14

    6 MainFunc: MAIN '{' Decls Instrucoes . '}'
   17 Instrucoes: Instrucoes . Instrucao

    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    READ        shift, and go to state 21
    PRINT       shift, and go to state 22
    DESIGNACAO  shift, and go to state 23
    '}'         shift, and go to state 24

    Instrucao  go to state 25
    Var        go to state 26


state 15

    4 Funcao: FUNCAO DESIGNACAO '(' ')' . '{' Decls Instrucoes Return '}'

    '{'  shift, and go to state 27


state 16

   12 DeclVar: DESIGNACAO . Init
   13        | DESIGNACAO . '[' VALOR ']'
   14        | DESIGNACAO . '[' VALOR ']' '[' VALOR ']'

    '['  shift, and go to state 28
    '='  shift, and go to state 29

    $default  reduce using rule 16 (Init)

    Init  go to state 30


state 17

    9 Decl: INT DeclsVar . ';'

    ';'  shift, and go to state 31


state 18

   10 DeclsVar: DeclVar .
   11         | DeclVar . ',' DeclsVar

    ','  shift, and go to state 32

    $default  reduce using rule 10 (DeclsVar)


state 19

   20 Instrucao: IF . '(' Cond ')' '{' Instrucoes '}'
   21          | IF . '(' Cond ')' '{' Instrucoes '}' ELSE '{' Instrucoes '}'

    '('  shift, and go to state 33


state 20

   22 Instrucao: WHILE . '(' Cond ')' '{' Instrucoes '}'

    '('  shift, and go to state 34


state 21

   25 Instrucao: READ . Var ';'

    DESIGNACAO  shift, and go to state 35

    Var  go to state 36


state 22

   23 Instrucao: PRINT . Expr ';'
   24          | PRINT . STRING ';'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    STRING      shift, and go to state 39
    '('         shift, and go to state 40

    Expr   go to state 41
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 23

   26 Instrucao: DESIGNACAO . '(' ')' ';'
   47 Var: DESIGNACAO .
   48    | DESIGNACAO . '[' Expr ']'
   49    | DESIGNACAO . '[' Expr ']' '[' Expr ']'

    '('  shift, and go to state 45
    '['  shift, and go to state 46

    $default  reduce using rule 47 (Var)


state 24

    6 MainFunc: MAIN '{' Decls Instrucoes '}' .

    $default  reduce using rule 6 (MainFunc)


state 25

   17 Instrucoes: Instrucoes Instrucao .

    $default  reduce using rule 17 (Instrucoes)


state 26

   19 Instrucao: Var . '=' Expr ';'

    '='  shift, and go to state 47


state 27

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' . Decls Instrucoes Return '}'

    $default  reduce using rule 8 (Decls)

    Decls  go to state 48


state 28

   13 DeclVar: DESIGNACAO '[' . VALOR ']'
   14        | DESIGNACAO '[' . VALOR ']' '[' VALOR ']'

    VALOR  shift, and go to state 49


state 29

   15 Init: '=' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 50
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 30

   12 DeclVar: DESIGNACAO Init .

    $default  reduce using rule 12 (DeclVar)


state 31

    9 Decl: INT DeclsVar ';' .

    $default  reduce using rule 9 (Decl)


state 32

   11 DeclsVar: DeclVar ',' . DeclsVar

    DESIGNACAO  shift, and go to state 16

    DeclsVar  go to state 51
    DeclVar   go to state 18


state 33

   20 Instrucao: IF '(' . Cond ')' '{' Instrucoes '}'
   21          | IF '(' . Cond ')' '{' Instrucoes '}' ELSE '{' Instrucoes '}'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Cond   go to state 52
    Expr   go to state 53
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 34

   22 Instrucao: WHILE '(' . Cond ')' '{' Instrucoes '}'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Cond   go to state 54
    Expr   go to state 53
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 35

   47 Var: DESIGNACAO .
   48    | DESIGNACAO . '[' Expr ']'
   49    | DESIGNACAO . '[' Expr ']' '[' Expr ']'

    '['  shift, and go to state 46

    $default  reduce using rule 47 (Var)


state 36

   25 Instrucao: READ Var . ';'

    ';'  shift, and go to state 55


state 37

   43 Fator: VALOR .

    $default  reduce using rule 43 (Fator)


state 38

   46 Fator: DESIGNACAO . '(' ')'
   47 Var: DESIGNACAO .
   48    | DESIGNACAO . '[' Expr ']'
   49    | DESIGNACAO . '[' Expr ']' '[' Expr ']'

    '('  shift, and go to state 56
    '['  shift, and go to state 46

    $default  reduce using rule 47 (Var)


state 39

   24 Instrucao: PRINT STRING . ';'

    ';'  shift, and go to state 57


state 40

   45 Fator: '(' . Cond ')'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Cond   go to state 58
    Expr   go to state 53
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 41

   23 Instrucao: PRINT Expr . ';'
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    ';'  shift, and go to state 59
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62


state 42

   34 Expr: Termo .
   39 Termo: Termo . '*' Fator
   40      | Termo . '/' Fator
   41      | Termo . '%' Fator
   42      | Termo . '&' Fator

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65
    '&'  shift, and go to state 66

    $default  reduce using rule 34 (Expr)


state 43

   38 Termo: Fator .

    $default  reduce using rule 38 (Termo)


state 44

   44 Fator: Var .

    $default  reduce using rule 44 (Fator)


state 45

   26 Instrucao: DESIGNACAO '(' . ')' ';'

    ')'  shift, and go to state 67


state 46

   48 Var: DESIGNACAO '[' . Expr ']'
   49    | DESIGNACAO '[' . Expr ']' '[' Expr ']'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 68
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 47

   19 Instrucao: Var '=' . Expr ';'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 69
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 48

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' Decls . Instrucoes Return '}'
    7 Decls: Decls . Decl

    INT  shift, and go to state 12

    $default  reduce using rule 18 (Instrucoes)

    Decl        go to state 13
    Instrucoes  go to state 70


state 49

   13 DeclVar: DESIGNACAO '[' VALOR . ']'
   14        | DESIGNACAO '[' VALOR . ']' '[' VALOR ']'

    ']'  shift, and go to state 71


state 50

   15 Init: '=' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 15 (Init)


state 51

   11 DeclsVar: DeclVar ',' DeclsVar .

    $default  reduce using rule 11 (DeclsVar)


state 52

   20 Instrucao: IF '(' Cond . ')' '{' Instrucoes '}'
   21          | IF '(' Cond . ')' '{' Instrucoes '}' ELSE '{' Instrucoes '}'

    ')'  shift, and go to state 72


state 53

   27 Cond: Expr . '>' '=' Expr
   28     | Expr . '<' '=' Expr
   29     | Expr . '=' '=' Expr
   30     | Expr . '!' '=' Expr
   31     | Expr . '<' Expr
   32     | Expr . '>' Expr
   33     | Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '='  shift, and go to state 73
    '>'  shift, and go to state 74
    '<'  shift, and go to state 75
    '!'  shift, and go to state 76
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 33 (Cond)


state 54

   22 Instrucao: WHILE '(' Cond . ')' '{' Instrucoes '}'

    ')'  shift, and go to state 77


state 55

   25 Instrucao: READ Var ';' .

    $default  reduce using rule 25 (Instrucao)


state 56

   46 Fator: DESIGNACAO '(' . ')'

    ')'  shift, and go to state 78


state 57

   24 Instrucao: PRINT STRING ';' .

    $default  reduce using rule 24 (Instrucao)


state 58

   45 Fator: '(' Cond . ')'

    ')'  shift, and go to state 79


state 59

   23 Instrucao: PRINT Expr ';' .

    $default  reduce using rule 23 (Instrucao)


state 60

   35 Expr: Expr '+' . Termo

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Termo  go to state 80
    Fator  go to state 43
    Var    go to state 44


state 61

   36 Expr: Expr '-' . Termo

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Termo  go to state 81
    Fator  go to state 43
    Var    go to state 44


state 62

   37 Expr: Expr '|' . Termo

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Termo  go to state 82
    Fator  go to state 43
    Var    go to state 44


state 63

   39 Termo: Termo '*' . Fator

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Fator  go to state 83
    Var    go to state 44


state 64

   40 Termo: Termo '/' . Fator

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Fator  go to state 84
    Var    go to state 44


state 65

   41 Termo: Termo '%' . Fator

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Fator  go to state 85
    Var    go to state 44


state 66

   42 Termo: Termo '&' . Fator

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Fator  go to state 86
    Var    go to state 44


state 67

   26 Instrucao: DESIGNACAO '(' ')' . ';'

    ';'  shift, and go to state 87


state 68

   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo
   48 Var: DESIGNACAO '[' Expr . ']'
   49    | DESIGNACAO '[' Expr . ']' '[' Expr ']'

    ']'  shift, and go to state 88
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62


state 69

   19 Instrucao: Var '=' Expr . ';'
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    ';'  shift, and go to state 89
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62


state 70

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' Decls Instrucoes . Return '}'
   17 Instrucoes: Instrucoes . Instrucao

    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    READ        shift, and go to state 21
    PRINT       shift, and go to state 22
    RETURN      shift, and go to state 90
    DESIGNACAO  shift, and go to state 23

    Return     go to state 91
    Instrucao  go to state 25
    Var        go to state 26


state 71

   13 DeclVar: DESIGNACAO '[' VALOR ']' .
   14        | DESIGNACAO '[' VALOR ']' . '[' VALOR ']'

    '['  shift, and go to state 92

    $default  reduce using rule 13 (DeclVar)


state 72

   20 Instrucao: IF '(' Cond ')' . '{' Instrucoes '}'
   21          | IF '(' Cond ')' . '{' Instrucoes '}' ELSE '{' Instrucoes '}'

    '{'  shift, and go to state 93


state 73

   29 Cond: Expr '=' . '=' Expr

    '='  shift, and go to state 94


state 74

   27 Cond: Expr '>' . '=' Expr
   32     | Expr '>' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40
    '='         shift, and go to state 95

    Expr   go to state 96
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 75

   28 Cond: Expr '<' . '=' Expr
   31     | Expr '<' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40
    '='         shift, and go to state 97

    Expr   go to state 98
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 76

   30 Cond: Expr '!' . '=' Expr

    '='  shift, and go to state 99


state 77

   22 Instrucao: WHILE '(' Cond ')' . '{' Instrucoes '}'

    '{'  shift, and go to state 100


state 78

   46 Fator: DESIGNACAO '(' ')' .

    $default  reduce using rule 46 (Fator)


state 79

   45 Fator: '(' Cond ')' .

    $default  reduce using rule 45 (Fator)


state 80

   35 Expr: Expr '+' Termo .
   39 Termo: Termo . '*' Fator
   40      | Termo . '/' Fator
   41      | Termo . '%' Fator
   42      | Termo . '&' Fator

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65
    '&'  shift, and go to state 66

    $default  reduce using rule 35 (Expr)


state 81

   36 Expr: Expr '-' Termo .
   39 Termo: Termo . '*' Fator
   40      | Termo . '/' Fator
   41      | Termo . '%' Fator
   42      | Termo . '&' Fator

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65
    '&'  shift, and go to state 66

    $default  reduce using rule 36 (Expr)


state 82

   37 Expr: Expr '|' Termo .
   39 Termo: Termo . '*' Fator
   40      | Termo . '/' Fator
   41      | Termo . '%' Fator
   42      | Termo . '&' Fator

    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    '%'  shift, and go to state 65
    '&'  shift, and go to state 66

    $default  reduce using rule 37 (Expr)


state 83

   39 Termo: Termo '*' Fator .

    $default  reduce using rule 39 (Termo)


state 84

   40 Termo: Termo '/' Fator .

    $default  reduce using rule 40 (Termo)


state 85

   41 Termo: Termo '%' Fator .

    $default  reduce using rule 41 (Termo)


state 86

   42 Termo: Termo '&' Fator .

    $default  reduce using rule 42 (Termo)


state 87

   26 Instrucao: DESIGNACAO '(' ')' ';' .

    $default  reduce using rule 26 (Instrucao)


state 88

   48 Var: DESIGNACAO '[' Expr ']' .
   49    | DESIGNACAO '[' Expr ']' . '[' Expr ']'

    '['  shift, and go to state 101

    $default  reduce using rule 48 (Var)


state 89

   19 Instrucao: Var '=' Expr ';' .

    $default  reduce using rule 19 (Instrucao)


state 90

    5 Return: RETURN . Expr ';'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 102
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 91

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' Decls Instrucoes Return . '}'

    '}'  shift, and go to state 103


state 92

   14 DeclVar: DESIGNACAO '[' VALOR ']' '[' . VALOR ']'

    VALOR  shift, and go to state 104


state 93

   20 Instrucao: IF '(' Cond ')' '{' . Instrucoes '}'
   21          | IF '(' Cond ')' '{' . Instrucoes '}' ELSE '{' Instrucoes '}'

    $default  reduce using rule 18 (Instrucoes)

    Instrucoes  go to state 105


state 94

   29 Cond: Expr '=' '=' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 106
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 95

   27 Cond: Expr '>' '=' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 107
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 96

   32 Cond: Expr '>' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 32 (Cond)


state 97

   28 Cond: Expr '<' '=' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 108
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 98

   31 Cond: Expr '<' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 31 (Cond)


state 99

   30 Cond: Expr '!' '=' . Expr

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 109
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 100

   22 Instrucao: WHILE '(' Cond ')' '{' . Instrucoes '}'

    $default  reduce using rule 18 (Instrucoes)

    Instrucoes  go to state 110


state 101

   49 Var: DESIGNACAO '[' Expr ']' '[' . Expr ']'

    VALOR       shift, and go to state 37
    DESIGNACAO  shift, and go to state 38
    '('         shift, and go to state 40

    Expr   go to state 111
    Termo  go to state 42
    Fator  go to state 43
    Var    go to state 44


state 102

    5 Return: RETURN Expr . ';'
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    ';'  shift, and go to state 112
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62


state 103

    4 Funcao: FUNCAO DESIGNACAO '(' ')' '{' Decls Instrucoes Return '}' .

    $default  reduce using rule 4 (Funcao)


state 104

   14 DeclVar: DESIGNACAO '[' VALOR ']' '[' VALOR . ']'

    ']'  shift, and go to state 113


state 105

   17 Instrucoes: Instrucoes . Instrucao
   20 Instrucao: IF '(' Cond ')' '{' Instrucoes . '}'
   21          | IF '(' Cond ')' '{' Instrucoes . '}' ELSE '{' Instrucoes '}'

    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    READ        shift, and go to state 21
    PRINT       shift, and go to state 22
    DESIGNACAO  shift, and go to state 23
    '}'         shift, and go to state 114

    Instrucao  go to state 25
    Var        go to state 26


state 106

   29 Cond: Expr '=' '=' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 29 (Cond)


state 107

   27 Cond: Expr '>' '=' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 27 (Cond)


state 108

   28 Cond: Expr '<' '=' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 28 (Cond)


state 109

   30 Cond: Expr '!' '=' Expr .
   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62

    $default  reduce using rule 30 (Cond)


state 110

   17 Instrucoes: Instrucoes . Instrucao
   22 Instrucao: WHILE '(' Cond ')' '{' Instrucoes . '}'

    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    READ        shift, and go to state 21
    PRINT       shift, and go to state 22
    DESIGNACAO  shift, and go to state 23
    '}'         shift, and go to state 115

    Instrucao  go to state 25
    Var        go to state 26


state 111

   35 Expr: Expr . '+' Termo
   36     | Expr . '-' Termo
   37     | Expr . '|' Termo
   49 Var: DESIGNACAO '[' Expr ']' '[' Expr . ']'

    ']'  shift, and go to state 116
    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '|'  shift, and go to state 62


state 112

    5 Return: RETURN Expr ';' .

    $default  reduce using rule 5 (Return)


state 113

   14 DeclVar: DESIGNACAO '[' VALOR ']' '[' VALOR ']' .

    $default  reduce using rule 14 (DeclVar)


state 114

   20 Instrucao: IF '(' Cond ')' '{' Instrucoes '}' .
   21          | IF '(' Cond ')' '{' Instrucoes '}' . ELSE '{' Instrucoes '}'

    ELSE  shift, and go to state 117

    $default  reduce using rule 20 (Instrucao)


state 115

   22 Instrucao: WHILE '(' Cond ')' '{' Instrucoes '}' .

    $default  reduce using rule 22 (Instrucao)


state 116

   49 Var: DESIGNACAO '[' Expr ']' '[' Expr ']' .

    $default  reduce using rule 49 (Var)


state 117

   21 Instrucao: IF '(' Cond ')' '{' Instrucoes '}' ELSE . '{' Instrucoes '}'

    '{'  shift, and go to state 118


state 118

   21 Instrucao: IF '(' Cond ')' '{' Instrucoes '}' ELSE '{' . Instrucoes '}'

    $default  reduce using rule 18 (Instrucoes)

    Instrucoes  go to state 119


state 119

   17 Instrucoes: Instrucoes . Instrucao
   21 Instrucao: IF '(' Cond ')' '{' Instrucoes '}' ELSE '{' Instrucoes . '}'

    IF          shift, and go to state 19
    WHILE       shift, and go to state 20
    READ        shift, and go to state 21
    PRINT       shift, and go to state 22
    DESIGNACAO  shift, and go to state 23
    '}'         shift, and go to state 120

    Instrucao  go to state 25
    Var        go to state 26


state 120

   21 Instrucao: IF '(' Cond ')' '{' Instrucoes '}' ELSE '{' Instrucoes '}' .

    $default  reduce using rule 21 (Instrucao)
